<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingTop="180dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp">

    <Button
        android:id="@+id/button_ex_um"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercicio_1" />

    <Button
        android:id="@+id/button_ex_dois"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercicio_2" />

    <Button
        android:id="@+id/button_ex_tres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercicio_3" />

    <Button
        android:id="@+id/button_ex_quatro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercicio_4" />

    <Button
        android:id="@+id/button_ex_cinco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercicio_5" />

</LinearLayout>